--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,11 @@ services:
     command: bash -c "npm install &&
       npm install mongoose &&
       npm install jsonwebtoken &&
+      npm install --save-dev @types/jsonwebtoken &&
+      npm install --save-dev @types/react &&
+      npm install --save-dev @types/react-dom &&
+      npm install --save-dev @types/node &&
+      npm install --save-dev typescript &&
       npm run dev"
     ports:
       - "3000:3000"
