--- a/compose.yml
+++ b/compose.yml
@@ -22,6 +22,7 @@ services:
       npm install --save-dev @types/react-dom &&
       npm install --save-dev @types/node &&
       npm install --save-dev typescript &&
+      npm run compile &&
       npm run dev"
     ports:
       - "3000:3000"
